--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,28 @@
-amqp
-asgiref==3.7.2
-asttokens==2.4.1
-async-timeout==4.0.3
-billiard==4.2.0
-celery==5.3.6
-click==8.1.7
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.3.0
-cron-descriptor==1.4.0
-decorator==5.1.1
-Django==3.2.23
+# Django and related libraries
+Django==4.2.1
 django-celery-beat
 django-storages
+django-constance[redis]
+django-environ
 django-timezone-field
-dlib
-exceptiongroup==1.2.0
-executing
+setuptools
+
+# Celery and Redis
+celery==5.3.6
+redis==5.0.1
+
+# Face Recognition and Image Processing
 face-recognition
 face-recognition-models
-ipdb
-ipython==8.19.0
-jedi==0.19.1
-matplotlib-inline
-numpy
+dlib
 opencv-python
-parso==0.8.3
-pexpect==4.9.0
-Pillow==9.4.0
-prompt-toolkit==3.0.43
-psutil==5.9.7
-ptyprocess==0.7.0
-pure-eval==0.2.2
-Pygments==2.17.2
-python-crontab==3.0.0
-python-dateutil==2.8.2
-pytz==2023.3.post1
-redis==5.0.1
-scikit-learn==1.3.2
-scipy
-six==1.16.0
-sqlparse==0.4.4
-stack-data==0.6.3
-threadpoolctl==3.2.0
-tomli==2.0.1
-traitlets==5.14.0
-typing_extensions==4.9.0
-tzdata==2023.3
-vine==5.1.0
-wcwidth==0.2.12
-django-constance[redis]
-insightface 
+numpy
+insightface
 onnxruntime
-facenet-pytorch
-tensorflow
-django-environ
+
+# Utilities
+psutil
+tzdata
+
+# Development (optional, move to requirements-dev.txt if preferred)
+ipdb
